# poker-assistant

./: .gitignore  .pre-commit-config.yaml  BRIEF_PROJET_ACTUEL.md  FLUX_RECONNAISSANCE_CARTES.md  GUIDE_CALIBRATEUR_ZONES.md  GUIDE_EXPORT_TEMPLATES.md  PROJET_STATUS.md  RAPPORT_INTEGRATION_OVERLAY.md  README.md  RESUME_FLUX_RECONNAISSANCE.md  RESUME_INTEGRATION_OVERLAY.md  launch_debug_recognition.py  launch_live_preview.py  launch_overlay.py  launch_overlay_simple_test.py  launch_table_calibrator.py  pyproject.toml  rename_templates.py  requirements.txt  test_app_quick.py  test_calibration_workflow.py  test_calibrator.py  test_window_detection.py
.cursor/rules/: cursorrules.mdc
src/poker_assistant/: __init__.py  __version__.py  app.py  cli.py  config.py
src/poker_assistant/ocr/: calibrate_gui.py  capture.py  card_recognition.py  layouts.py  parsers.py  readers.py  recognition_integration.py  rois.py  table_calibrator.py  text_recognition.py
src/poker_assistant/rooms/: pmu.yaml  schema.json  winamax.yaml
src/poker_assistant/security/: guard.py
src/poker_assistant/state/: __init__.py  model.py
src/poker_assistant/strategy/: engine.py
src/poker_assistant/strategy/providers/: base.py  ollama.py  ollama_.py  rules_.py  typing_ext.py
src/poker_assistant/telemetry/: logging.py  storage.py
src/poker_assistant/ui/: live_preview.py  overlay.py  roi_viewer_qt.py  room_selector.py  voice.py
src/poker_assistant/windows/: detector.py
src/poker_assistant/windows/signatures/: README.md
src/rooms/: winamax.yaml
tests/: test_parsers.py  test_policy_json.py
