[project]
name = "poker-assistant"
version = "0.1.0"
description = "Assistant IA Poker local (OCR + Ollama) — lecture seule, recommandations"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Jerry", email = "jerry@example.com" }
]
keywords = ["poker", "ocr", "opencv", "easyocr", "ollama", "customtkinter", "windows"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Games/Entertainment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.8",
  "mss>=9.0",
  "easyocr>=1.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "customtkinter>=5.2",
  "pywinctl>=0.4",
  "pygetwindow>=0.0.9",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
voice = ["pyttsx3>=2.90"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.5",
  "black>=24.4",
  "isort>=5.13",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32.0.20240712",
]

[project.scripts]
poker-assistant = "poker_assistant.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
plugins = []
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
namespace_packages = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [
  "tests/",
]


